--- a/css/sample.css
+++ b/css/sample.css
@@ -11,9 +11,10 @@
 	background-color: white;
 }
 
-.carousel-img {
+.carousel-inner>.item>.carousel-img {
     width: 100%;
-    height: 480px;
+    margin: auto;
+    padding: auto;
 }
 
 .carousel-indicators li {
@@ -39,7 +40,7 @@
     background: #fff;
     display: none;
     color: #FFF;
-    width: 54px;
+    width: 40px;
     border: 2px solid #ededed;
     position: fixed;
     right: 0px;
@@ -54,34 +55,21 @@
 
 .float-li {
 	list-style-type:none;
-	height: 80px;
+	height: 50px;
 }
 
 .sidebar-img{
 	position:relative;
 	left:8px;
-	top:20px;
-	width: 80%;
+	top:10px;
+	width: 50%;
 }
 
-.sidebar-qr{
-	border: 1px solid #999;
-	background-color: #ffffff;
-	position:absolute;
-	left:-127px;
-	top:57px;
-	width: 125px;
-	height: 125px;
+.popover-content .contact-info {
+    /*position: absolute;*/
+    width: 100px;
 }
 
-.float-li-text {
-	text-align: center;
-	padding-top: 50px;
-	color: #4f4f4f;
-    visibility:hidden;
-}
-
-.contact-info {
-    width: 50%;
-    margin-left:60px;
+.custom-font {
+  font-family: "Microsoft YaHei";
 }
