--- a/css/sample.css
+++ b/css/sample.css
@@ -34,7 +34,7 @@
     background: #fff;
     display: none;
     color: #FFF;
-    width: 40px;
+    width: 50px;
     border: 2px solid #ededed;
     position: fixed;
     right: 0px;
@@ -56,7 +56,7 @@
 	position:relative;
 	left:8px;
 	top:10px;
-	width: 50%;
+	width: 70%;
 }
 
 .popover-content .contact-info {
@@ -65,4 +65,8 @@
 
 .custom-font {
   font-family: "Microsoft YaHei";
+}
+
+.carousel-img {
+    width:100%;
 }
